<resources>
    <string name="app_name">MyNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="travel">Travel</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="business">Business</string>
    <string name="arts">Arts</string>
    <string name="search">Search</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="noExtract">(No extract available)</string>
    <string name="set">Set</string>
    <string name="errorDate1">La date de début doit être inférieure à la date de fin</string>
    <string name="enterAtLeastOneKeyWord">Inscrire au moins un mot-clef</string>
    <string name="badFormatDate">Mauvais format de date</string>
    <string name="cat_gories">Catégories</string>
    <string name="noArticles">Aucun article n\'a été trouvé pour cette recherche</string>
    <string name="errorDate2">Les dates ne doivent pas être supérieures à la date du jour</string>
    <string name="checkAtLeastOneCategory">Cocher au moins une catégorie</string>
    <string name="noresults">Aucun résultat trouvé</string>
    <string name="stopNotifications">Désactivation des notifications</string>
    <string name="startNotifications">Notifications activées</string>
    <string name="notificationOneArticle">L\'application MyNews a trouvé un nouvel article qui correspond à votre recherche.</string>
    <string name="notificationManyArticles1">L\'application MyNews a trouvé</string>
    <string name="notificationsManyArticles2">nouveaux articles qui correspondent à votre recherche.</string>
    <string name="search_articles">Search Articles</string>
    <string name="searchArticles">Search Articles</string>
    <string name="searchresults">Search results</string>
    <string name="article">Article</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="helptext">Bienvenue sur MyNew.\n\nSur cette application vous pouvez:\n  - Naviguer entre les onglets pour consulter les articles récents des catégories \"Top stories\", \"Most popular\" et \"Business\". \n- Cliquer en haut à gauche pour accèder à un menu, puis choisir l\'une des six catégories afficher. \n- Cliquer sur la loupe pour rechercher des articles selon des critères. \n- Cliquer en haut à droite pour accèder à un sous-menu, puis sur \"notifications\" pour recevoir toutes les 24 heures des notifications sur les nouveaux articles répondants à vos critères de recherche.</string>
    <string name="abouttext">Aout 2019, Projet 5 d\'OpenClassRooms, Jean-François Vincler</string>
</resources>
